--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
     />
     <link
       rel="stylesheet"
-      href="/src/styles.css"
+      href="./src/styles.css"
     />
     <title>Social links profile</title>
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style></style>
   </head>
   <body>
     <img />
@@ -66,13 +64,5 @@
         >
       </section>
     </main>
-    <!-- <div class="attribution">
-      Challenge by
-      <a
-        href="https://www.frontendmentor.io?ref=challenge"
-        target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
   </body>
 </html>
