--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
       content="width=device-width, initial-scale=1.0"
     />
     <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22> 🔗 </text></svg>"
     />
     <link
       rel="stylesheet"
